# stupid-hackathon-2020

./: .gitignore  README.md  bundle.css  bundle.css.map  bundle.js  bundle.js.map
country-picker/: package-lock.json  package.json  rollup.config.js
country-picker/api/.aws-cdk/: cdk.context.json  cdk.json  package-lock.json  package.json
country-picker/api/.aws-cdk/lib/: weather-api-stack.ts
country-picker/api/.aws-cdk/test/: weather-api.test.ts
country-picker/api/rust-weatherstack-proxy-lambda/: Cargo.toml  README.md  build.sh
country-picker/api/rust-weatherstack-proxy-lambda/src/: main.rs  weather_client.rs
country-picker/public/: global.css
country-picker/src/: App.svelte  Weather.svelte  populations.js  populations.json
