[package]
name = "rust-weatherstack-proxy-lambda"
version = "0.1.0"
authors = ["RichoDemus <git@richodemus.com>"]
edition = "2018"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.1"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
log = "^0.4"
simple_logger = "^1"


[dependencies.reqwest]
version = "0.10.4"
features = ["blocking"]

[[bin]]
name = "bootstrap"
path = "src/main.rs"
